[features]
default = []

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["configuration"]
description = "Rust tools"
edition = "2018"
keywords = ["ci", "tools"]
license = "Apache-2.0"
name = "rust-tools"
readme = "README.md"
repository = "https://github.com/c410-f3r/ci-tools"
version = "0.1.0"
